2003-01-09  François Déchelle  <dechelle@mac-dechelle.ircam.fr>

	* audio output works on Mac OS X (tested with builtin audio and MOTU 828)

2003-01-07  Francois Dechelle  <dechelle@mac-dechelle.ircam.fr>

	* audio in progress on Mac OS X

2003-01-03  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* update input~ object to use new audiolabel/audioport API
	* audio in works with jack

2002-12-31  Norbert Schnell  <schnell@mac-schnell2.ircam.fr>

	* removed patcher from fts_object_create()
	* finalized initstantiation and runtime error reporting
	* fixed seqence and track saving/loading (now based on dumper)

2002-12-27  Norbert Schnell  <schnell@mac-schnell2.ircam.fr>

	* first modest doc revision for version 4
	* added user doc for writing FTS classes (doc/classes.html)

2002-12-26  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* Audio out works with jack.

2002-12-26  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* fixed many bugs in audio and ossaudioport. Now, audio out works with OSS.

2002-12-24  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* commited a first version of working audio, including the "monitor~" object

2002-12-20  Norbert Schnell  <schnell@mac-schnell2.ircam.fr>

	* encapsulated all patcher related fields of fts_object_t to patcher_data structure only allocated when needed
	* introduced new API call fts_object_error() (replacing fts_object_signal_runtime_error and fts_object_set_error)

2002-12-17  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* commited an intermediate version of audio. It currently does not compile, but
	include the necessary prototypes for updating the audio ports.

2002-12-16  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* add python fts client into autoconf stuff (install into $(datadir)/jmax/client/python).
	We can't use AM_PATH_PYTHON which is only available for automake version > 1.5 (RedHat 7.3 use automake-1.4-p5)

2002-12-12  Francois Dechelle  <dechelle@limbe.ircam.fr>
